# CloudDriveManager

./: .gitignore  AGENTS.md  CLAUDE.md  RCLONE_CONFIG.md  build_wsl.sh  cloud-drive-manager.spec  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  runtime_hook.py
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
config/: config_dev.yaml  config_dev.yaml.example  config_prod.yaml  config_prod.yaml.example
specs/001-cloud-drive-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cloud-drive-manager/checklists/: requirements.md
specs/001-cloud-drive-manager/contracts/: api-contract.md
specs/002-rclone-db-config/: spec.md
specs/003-cloud-drive-operations/: data-model.md  plan.md  post-hook.txt  quickstart.md  research.md  spec.md  tasks.md
specs/003-cloud-drive-operations/checklists/: requirements.md
specs/003-cloud-drive-operations/contracts/: sync-job-api.md
specs/005-rclone-full-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rclone-full-testing/checklists/: requirements.md
specs/005-rclone-full-testing/contracts/: cloud-download-api.md
src/: __init__.py  __main__.py  app.py  main.py
src/adapters/: rclone_adapter.py
src/api/: admin.py  cloud.py  health.py  operation_log.py  pikpak_offline.py  sync.py
src/config/: config.py
src/core/: config.py  encryption.py  exceptions.py  logger.py  operation_logger.py  schemas.py
src/db/: connection.py  database.py  init_db.py  repository.py  schemas.py
src/mcp/: __main__.py  server.py
src/services/: aliyun.py  baidu.py  base.py  cloud_download_manager.py  jianguoyun.py  pikpak.py  pikpak_api.py  pikpak_client.py  quark.py  rclone_configurator.py  sync_manager.py
tests/: conftest.py
tests/integration/: test_api.py  test_cloud_drive_contracts.py  test_mcp_tools.py
tests/unit/: test_cloud_api.py  test_cloud_download.py  test_cloud_drive_file_in_use.py  test_config.py  test_db.py  test_edge_cases.py  test_encryption.py  test_exceptions.py  test_health.py  test_logger.py  test_rclone_adapter.py  test_rclone_only_enforcement.py  test_schemas.py
wsl/: cloud-drive-manager-mcp.service  cloud-drive-manager.service  cloud-drive-manager.sh  cloud-drive-mcp.sh  setup.sh  test_import.py
