[project]
name = "cloud-drive-manager"
version = "0.1.0"
description = "Cloud drive unified file operations API with MCP interface"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "fastmcp>=0.40.0",
    "pikpakapi>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"